// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://localhost:3000/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
   Welcome 
</a>
`;

exports[`changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://localhost:3000/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
   Welcome 
</a>
`;

exports[`changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://localhost:3000/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
   Welcome 
</a>
`;
